fix(editor): fix z-index of empty placeholder

--- a/src/components/Editor/Article/styles.global.css
+++ b/src/components/Editor/Article/styles.global.css
@@ -52,6 +52,7 @@
       right: 0;
       bottom: 0;
       left: 0;
+      z-index: -1;
       font-size: var(--font-size-sm-s);
       line-height: 1.5;
       color: var(--color-grey);
